--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,72 @@
-/* You can add global styles to this file, and also import other style files */
+@import '../node_modules/bootstrap-icons/font/bootstrap-icons.css';
+
+$blue: #0d6efd;
+$indigo: #6610f2;
+$purple: #6f42c1;
+$pink: #d63384;
+$red: #ff3838;
+$orange: #fd7e14;
+$yellow: #ffc107;
+$green: #198754;
+$teal: #20c997;
+$cyan: #0dcaf0;
+$white: #fff;
+$gray-100: #f8f9fa;
+$gray-200: #e9ecef;
+$gray-300: #dee2e6;
+$gray-400: #ced4da;
+$gray-500: #adb5bd;
+$gray-600: #6c757d;
+$gray-700: #495057;
+$gray-800: #343a40;
+$gray-900: #212529;
+$black: #000;
+
+$primary: #fa44e8ff;
+$secondary: #9b5cff;
+$success: #8be480;
+$info: $cyan;
+$warning: $yellow;
+$danger: $red;
+$light: #ffd6fa;
+$dark: #1a1a1a;
+//$dark: #212529;
+
+$theme-colors: (
+  'primary': $primary,
+  'secondary': $secondary,
+  'success': $success,
+  'info': $info,
+  'warning': $warning,
+  'danger': $danger,
+  'light': $light,
+  'dark': $dark,
+);
+
+@import '../node_modules/bootstrap/scss/bootstrap.scss';
+
+body {
+  background-color: var(--bs-dark);
+  font-family: 'Roboto', serif;
+  //font-size: 1.1rem;
+  //font-weight: 500;
+  padding: 2rem 4rem 2rem 4rem;
+}
+
+.btn {
+  color: var(--bs-white) !important;
+}
+
+.table {
+  --bs-table-bg: none;
+  --bs-table-border-color: var(--bs-primary);
+}
+
+th {
+  color: var(--bs-secondary) !important;
+  font-size: 1.3rem;
+}
+
+td {
+  color: var(--bs-light) !important;
+}
