--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header text-center p-3">
   <img [src]="img" class="img-fluid" alt="RxJs Vs NgRxJs" />
   <h1 class="text-primary mt-5">
-    SIGNALS <span class="text-secondary">vs</span> SUBJECTS
-    <span class="text-secondary">vs</span> NgRx
+    Signals <span class="text-secondary">Vs</span> Subjects
+    <span class="text-secondary">Vs</span> NgRx
   </h1>
 </div>
