--- a/src/app/components/introduction/introduction.component.html
+++ b/src/app/components/introduction/introduction.component.html
@@ -1,11 +1,11 @@
 <div class="introduction mt-5">
   <h2 [innerHTML]="'introduction.title' | translate" class="text-primary"></h2>
-  <div [innerHTML]="'introduction.description' | translate" class="text-light"></div>
+  <div [innerHTML]="'introduction.description' | translate" class="text-secondary"></div>
   @for(item of introductionList; track $index){
   <app-item-list
     [title]="'introduction.list.' + item + '.title'"
     [description]="'introduction.list.' + item + '.description'"
   ></app-item-list>
   }
-  <div [innerHTML]="'introduction.conclusion' | translate" class="text-light mt-3"></div>
+  <div [innerHTML]="'introduction.conclusion' | translate" class="text-secondary mt-3"></div>
 </div>
