--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@ $blue: #0d6efd;
 $indigo: #6610f2;
 $purple: #6f42c1;
 $pink: #d63384;
-$red: #ff3838;
+$red: #dc3545;
 $orange: #fd7e14;
 $yellow: #ffc107;
 $green: #198754;
@@ -22,11 +22,11 @@ $gray-800: #343a40;
 $gray-900: #212529;
 $black: #000;
 
-$primary: #fa44e8ff;
-$secondary: #9b5cff;
-$success: #8be480;
+$primary: #ed168fff;
+$secondary: #4b2074ff;
+$success: $green;
 $info: $cyan;
-$warning: $yellow;
+$warning: $orange;
 $danger: $red;
 $light: #ffd6fa;
 $dark: #1a1a1a;
@@ -46,7 +46,7 @@ $theme-colors: (
 @import '../node_modules/bootstrap/scss/bootstrap.scss';
 
 body {
-  background-color: var(--bs-dark);
+  //background-color: var(--bs-dark);
   font-family: 'Roboto', serif;
   //font-size: 1.1rem;
   //font-weight: 500;
@@ -68,5 +68,5 @@ th {
 }
 
 td {
-  color: var(--bs-light) !important;
+  color: var(--bs-secondary) !important;
 }
