--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,6 @@
-<div class="header text-center p-3">
+<div class="header text-center">
   <img [src]="img" class="img-fluid" alt="RxJs Vs NgRxJs" />
-  <h1 class="text-primary mt-5">
-    Signals <span class="text-secondary">Vs</span> Subjects
-    <span class="text-secondary">Vs</span> NgRx
+  <h1 class="text-secondary mt-5 d-none d-md-block">
+    Signals <span class="text-primary">Vs</span> Subjects <span class="text-primary">Vs</span> NgRx
   </h1>
 </div>
