--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,15 @@
   <div class="app__header">
     <app-header />
   </div>
-  <div class="app_body">
+  <div class="app_body px-5">
     <div class="app__introduction mt-3">
       <app-introduction />
     </div>
     <div class="app__table mt-3">
       <app-table />
+    </div>
+    <div class="app__examples mt-3">
+      <app-examples />
     </div>
   </div>
 </div>
