--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,3 +1,42 @@
-h1 {
-  font-size: 5rem;
+.header {
+  background: url('/assets/images/clouds.png') no-repeat center center;
+  background-size: cover;
+  padding: 5rem 2rem 3rem 2rem;
+  h1 {
+    font-size: 5rem;
+    & > span {
+      font-size: 4rem;
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .header {
+    h1 {
+      font-size: 3.5rem;
+      & > span {
+        font-size: 2.5rem;
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    padding: 2rem;
+    h1 {
+      font-size: 2.5rem;
+      & > span {
+        font-size: 1.5rem;
+      }
+    }
+  }
+}
+
+@media (max-width: 576px) {
+  .header {
+    h1 {
+      font-size: 2rem;
+    }
+  }
 }
