--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="app__header">
     <app-header />
   </div>
-  <div class="app_body px-5">
+  <div class="app_body px-sm-5 px-3">
     <div class="app__introduction mt-3">
       <app-introduction />
     </div>
