--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,7 @@ $orange: #fd7e14;
 $yellow: #ffc107;
 $green: #198754;
 $teal: #20c997;
-$cyan: #0dcaf0;
+$cyan: #5ac8fa;
 $white: #fff;
 $gray-100: #f8f9fa;
 $gray-200: #e9ecef;
@@ -50,29 +50,29 @@ body {
   font-family: 'Roboto', serif;
   //font-size: 1.1rem;
   //font-weight: 500;
+  overflow-x: hidden;
 }
 
-//ScrollBar
 ::-webkit-scrollbar {
-  height: 0.5rem;
-  width: 0.5rem;
+  height: 0.3rem;
+  width: 0.3rem;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: var(--bs-light);
+  background: #f1f1f1;
   border-radius: 0px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: var(--bs-primary);
+  background: #ccc;
   border-radius: 0px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: var(--bs-secondary);
+  background: #b3b2b2;
 }
 
 .btn {
@@ -91,4 +91,10 @@ th {
 
 td {
   color: var(--bs-secondary) !important;
+}
+
+@media (max-width: 576px) {
+  body {
+    font-size: 0.9rem;
+  }
 }
