--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,13 +3,13 @@
     <app-header />
   </div>
   <div class="app_body px-sm-5 px-3">
-    <div class="app__introduction mt-3">
+    <div class="app__introduction mt-4 mt-sm-5">
       <app-introduction />
     </div>
-    <div class="app__table mt-3">
+    <div class="app__table mt-4 mt-sm-5">
       <app-table />
     </div>
-    <div class="app__examples mt-3">
+    <div class="app__examples mt-4 mt-sm-5">
       <app-examples />
     </div>
   </div>
