--- a/src/app/components/examples/examples.component.html
+++ b/src/app/components/examples/examples.component.html
@@ -1,4 +1,4 @@
-<div class="examples mt-5">
+<div class="examples">
   <h2 class="text-primary">{{ 'examples.title' | translate }}</h2>
   <div [innerHTML]="'examples.description' | translate" class="text-secondary"></div>
   <div class="alert alert-info" role="alert">
