--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,4 +1,4 @@
-<h2 [innerHTML]="'table.title' | translate" class="text-primary mt-5 mb-2"></h2>
+<h2 [innerHTML]="'table.title' | translate" class="text-primary mb-2"></h2>
 <p class="text-secondary" [innerHTML]="'table.description' | translate"></p>
 <div class="table-responsive">
   <table class="table">
