--- a/src/app/components/rxjs-result/rxjs-result.component.html
+++ b/src/app/components/rxjs-result/rxjs-result.component.html
@@ -1,12 +1,14 @@
 <div class="rxjs-result">
   <div class="row">
-    @for (player of playersService.players(); track $index) {
+    @for (player of playersService.$players | async; track $index) {
       <div class="col-md-4 text-center">
         <app-player [player]="player" />
       </div>
     }
-    <div class="col-12">
-      <app-chart [idChart]="'signals'" [dataSets]="chartDataSets" />
-    </div>
+    @if (chartDataSets.length) {
+      <div class="col-12">
+        <app-chart [idChart]="'rxjs'" [dataSets]="chartDataSets" />
+      </div>
+    }
   </div>
 </div>
