--- a/src/app/components/example/example.component.html
+++ b/src/app/components/example/example.component.html
@@ -1,4 +1,4 @@
-<div class="example">
+<div class="example border-primary border-bottom py-4">
   <h3 class="text-secondary">{{ 'examples.' + example.title + '.title' | translate }}</h3>
   <div class="text-secondary" [innerHTML]="'examples.' + example.title + '.description' | translate"></div>
   <div class="row">
@@ -7,13 +7,13 @@
         <app-code [code]="example.configCode" [title]="'Service'" />
       </div>
     }
-    <div class="col-xl-7">
+    <div class="col-xl-6">
       <app-code [code]="example.serviceCode" [title]="'Service'" />
       <app-code [code]="example.componentCode" [title]="'Component'" />
       <app-code [code]="example.htmlCode" [title]="'Html'" />
     </div>
-    <div class="col-xl-5">
-      <!--<h6 class="code__title text-primary mt-4">{{ 'examples.result' | translate }}</h6>-->
+    <div class="col-xl-6 border-start pt-3">
+      <h3 class="code__title text-center text-primary mt-4">{{ 'examples.result' | translate }}</h3>
       <ng-content></ng-content>
     </div>
   </div>
