--- a/src/app/components/examples/examples.component.html
+++ b/src/app/components/examples/examples.component.html
@@ -13,6 +13,9 @@
         @case ('rxjs') {
           <app-rxjs-result />
         }
+        @case ('ngrx') {
+          <app-ngrx-result />
+        }
       }
     </app-example>
   }
