--- a/src/app/components/error/error.component.html
+++ b/src/app/components/error/error.component.html
@@ -1,1 +1,1 @@
-<div class="error alert alert-danger mt-4" role="alert">An error occurred while loading the data.</div>
+<div class="error alert alert-danger mt-4" role="alert">{{ error!.error.message || 'Internal Server Error' }}</div>
