--- a/src/app/components/signals-result/signals-result.component.html
+++ b/src/app/components/signals-result/signals-result.component.html
@@ -1,14 +1,21 @@
 <div class="signals-result">
-  <div class="row">
-    @for (player of playersService.players(); track $index) {
-      <div class="col-4 text-center">
-        <app-player [player]="player" />
+  <app-execution [time]="totalTime" [loading]="loading()" (actionGetPlayers)="click()" />
+  @if (!loading()) {
+    @if (error()) {
+      <app-error [error]="error()"></app-error>
+    } @else {
+      <div class="row">
+        @for (player of players(); track $index) {
+          <div class="col-4 text-center">
+            <app-player [player]="player" />
+          </div>
+        }
+        @if (chartDataSets.length) {
+          <div class="col-12">
+            <app-chart [idChart]="'signals'" [dataSets]="chartDataSets" />
+          </div>
+        }
       </div>
     }
-    @if (chartDataSets.length) {
-      <div class="col-12">
-        <app-chart [idChart]="'signals'" [dataSets]="chartDataSets" />
-      </div>
-    }
-  </div>
+  }
 </div>
