--- a/src/app/components/example/example.component.html
+++ b/src/app/components/example/example.component.html
@@ -1,5 +1,20 @@
 <div class="example border-primary border-bottom py-5">
-  <h3 class="text-secondary">{{ 'examples.' + example.title + '.title' | translate }}</h3>
+  <div class="d-inline-flex align-items-center">
+    <h3 class="text-secondary">{{ 'examples.' + example.title + '.title' | translate }}</h3>
+    @if (example.title === 'ngrx' || example.title === 'ngrxSignal') {
+      <div class="form-check form-switch ms-3">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          role="switch"
+          (change)="changeIsNgRxSignals()"
+          [checked]="utilsService.isNgRxSignals"
+          id="isNgRxSignals"
+        />
+        <label class="form-check-label text-primary fw-bold" for="flexSwitchCheckDefault">With Signals</label>
+      </div>
+    }
+  </div>
   <div class="text-secondary" [innerHTML]="'examples.' + example.title + '.description' | translate"></div>
   <div class="row">
     @if (example.configCode) {
