--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="app">
+<div class="app bg-light">
   <div class="app__header">
     <app-header />
   </div>
@@ -12,9 +12,7 @@
     <div class="app__examples mt-4 mt-sm-5">
       <h2 class="text-primary">{{ 'examples.title' | translate }}</h2>
       <div [innerHTML]="'examples.description' | translate" class="text-secondary"></div>
-      <div class="alert alert-info" role="alert">
-        {{ 'examples.alert' | translate }}
-      </div>
+      <div class="alert alert-info" role="alert" [innerHTML]="'examples.alert' | translate"></div>
       <app-code [code]="serviceCode" [title]="'Service'" />
       <app-signals-example />
       <app-rxjs-example />
