--- a/src/assets/prism/prism.css
+++ b/src/assets/prism/prism.css
@@ -15,7 +15,7 @@ pre[class*='language-'] {
   -o-tab-size: 4;
   tab-size: 4;
   text-align: left;
-  text-shadow: 0 1px #fff;
+  /*text-shadow: 0 1px #fff;*/
   white-space: pre;
   word-break: normal;
   word-spacing: normal;
@@ -49,7 +49,7 @@ pre[class*='language-'] {
 :not(pre) > code[class*='language-'],
 pre[class*='language-'] {
   /*background: #fdf4fc;*/
-  background-color: white;
+  background-color: var(bs-light);
 }
 :not(pre) > code[class*='language-'] {
   border-radius: 0.3em;
@@ -90,7 +90,7 @@ pre[class*='language-'] {
 .token.entity,
 .token.operator,
 .token.url {
-  background: hsla(0, 0%, 100%, 0.5);
+  /* background: hsla(0, 0%, 100%, 0.5);*/
   color: #9a6e3a;
 }
 .token.atrule,
