--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,10 +4,10 @@ $blue: #0d6efd;
 $indigo: #6610f2;
 $purple: #6f42c1;
 $pink: #d63384;
-$red: #dc3545;
-$orange: #fd7e14;
+$red: #dd606d;
+$orange: #eb9650;
 $yellow: #ffc107;
-$green: #198754;
+$green: #5a8a73;
 $teal: #20c997;
 $cyan: #5ac8fa;
 $white: #fff;
@@ -22,13 +22,16 @@ $gray-800: #343a40;
 $gray-900: #212529;
 $black: #000;
 
-$primary: #ed168fff;
-$secondary: #4b2074ff;
+//$primary: #ed168fff;
+//$secondary: #4b2074ff;
+$primary: #e44ca2;
+$secondary: #8e7cc3;
 $success: $green;
 $info: $cyan;
 $warning: $orange;
 $danger: $red;
-$light: #fdf4fc;
+//$light: #fdf4fc;
+$light: white;
 $dark: #1a1a1a;
 //$dark: #212529;
 
