--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,5 +22,8 @@
         <app-ngrx-example />
       }
     </div>
+    <div class="app__conclusion mt-4 mb-5">
+      <app-conclusion />
+    </div>
   </div>
 </div>
