--- a/src/app/components/example-introduction/example-introduction.component.html
+++ b/src/app/components/example-introduction/example-introduction.component.html
@@ -1,6 +1,6 @@
 <div class="example-introduction">
   <div class="d-inline-flex align-items-center">
-    <h3 class="text-secondary">{{ 'examples.' + example.title + '.title' | translate }}</h3>
+    <h3 class="text-secondary"><i class="bi bi-asterisk text-primary"></i> {{ 'examples.' + example.title + '.title' | translate }}</h3>
     @if (example.title === 'ngrx' || example.title === 'ngrxSignal') {
       <div class="form-check form-switch ms-3">
         <input
