--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,10 @@
 <div class="header text-center">
-  <img [src]="img" class="img-fluid" alt="RxJs Vs NgRxJs" />
-  <h1 class="text-secondary mt-5 d-none d-md-block">
-    Signals <span class="text-primary">Vs</span> Subjects <span class="text-primary">Vs</span> NgRx
+  <div class="header__language">
+    <app-language />
+  </div>
+  <img [src]="img" class="img-fluid header__logo" alt="RxJs Vs NgRxJs" />
+  <h1 class="header__text mt-5 d-none d-md-block">
+    Signals <span class="header__text header__text--secondary">Vs</span> Subjects
+    <span class="header__text header__text--secondary">Vs</span> NgRx
   </h1>
 </div>
