--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,10 +4,10 @@ $blue: #0d6efd;
 $indigo: #6610f2;
 $purple: #6f42c1;
 $pink: #d63384;
-$red: #dd606d;
-$orange: #eb9650;
+$red: #d34351;
+$orange: #eca367;
 $yellow: #ffc107;
-$green: #5a8a73;
+$green: #690;
 $teal: #20c997;
 $cyan: #5ac8fa;
 $white: #fff;
@@ -24,8 +24,8 @@ $black: #000;
 
 //$primary: #ed168fff;
 //$secondary: #4b2074ff;
-$primary: #e44ca2;
-$secondary: #8e7cc3;
+$primary: #ee5b97;
+$secondary: #6d3b8e;
 $success: $green;
 $info: $cyan;
 $warning: $orange;
