--- a/src/app/components/rxjs-example/rxjs-example.component.html
+++ b/src/app/components/rxjs-example/rxjs-example.component.html
@@ -1,4 +1,4 @@
-<div class="rxjs-example">
+<div class="rxjs-example mt-5 border-bottom border-primary pb-5">
   <app-example-introduction [example]="example" />
   <app-example-code [example]="example" />
   <div class="rxjs-example__result">
@@ -9,12 +9,12 @@
       } @else {
         <div class="row">
           @for (player of players$ | async; track $index) {
-            <div class="col-md-4 text-center">
+            <div class="col-4 text-center">
               <app-player [player]="player" />
             </div>
           }
           @if (chartDataSets.length) {
-            <div class="col-12">
+            <div class="col-12 col-lg-6 offset-lg-3">
               <app-chart [idChart]="'rxjs'" [dataSets]="chartDataSets" />
             </div>
           }
