--- a/src/app/components/signals-example/signals-example.component.html
+++ b/src/app/components/signals-example/signals-example.component.html
@@ -1,4 +1,4 @@
-<div class="signals-example">
+<div class="signals-example mt-4 border-bottom border-primary pb-5">
   <app-example-introduction [example]="example" />
   <app-example-code [example]="example" />
   <div class="signals-example__result">
@@ -14,7 +14,7 @@
             </div>
           }
           @if (chartDataSets.length) {
-            <div class="col-12">
+            <div class="col-12 col-lg-6 offset-lg-3">
               <app-chart [idChart]="'signals'" [dataSets]="chartDataSets" />
             </div>
           }
