--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -6,7 +6,7 @@
       <tr>
         <th></th>
         <th class="text-nowrap"><i class="bi bi-asterisk text-primary"></i> Signals</th>
-        <th class="text-nowrap"><i class="bi bi-asterisk text-primary"></i> RxJs</th>
+        <th class="text-nowrap"><i class="bi bi-asterisk text-primary"></i> RxJS Subjects</th>
         <th class="text-nowrap"><i class="bi bi-asterisk text-primary"></i> NgRx</th>
       </tr>
     </thead>
