--- a/src/app/components/code/code.component.scss
+++ b/src/app/components/code/code.component.scss
@@ -1,6 +1,6 @@
-@media screen and (max-width: 576px) {
+@media (max-width: 576px) {
+  code[class*='language-'],
   pre[class*='language-'] {
-    font-size: 1rem;
-    line-height: 1;
+    font-size: 0.8rem !important;
   }
 }
