--- a/src/app/components/item-list/item-list.component.html
+++ b/src/app/components/item-list/item-list.component.html
@@ -1,4 +1,4 @@
-<li class="item-list text-decoration-none">
+<li class="item-list text-decoration-none mb-3">
   <i class="bi bi-patch-check-fill text-secondary fs-4"></i>
   <span class="item-list__title fs-5 text-primary ms-2 fw-bold">{{ title | translate }}:</span>
   <span class="item-list__description text-secondary ms-2" [innerHTML]="description | translate"></span>
