--- a/src/app/components/conclusion/conclusion.component.html
+++ b/src/app/components/conclusion/conclusion.component.html
@@ -7,7 +7,7 @@
       <p class="text-secondary">
         Front End Architect
         <a
-          class="link-underline link-underline-opacity-0"
+          class="link-underline link-underline-opacity-0 ms-2"
           target="_blank"
           href="https://www.linkedin.com/in/juan-manuel-mu%C3%B1oz-gonz%C3%A1lez/"
           ><i class="bi bi-linkedin"></i
