--- a/src/app/components/signals-example/signals-example.component.html
+++ b/src/app/components/signals-example/signals-example.component.html
@@ -2,7 +2,7 @@
   <app-example-introduction [example]="example" />
   <app-example-code [example]="example" />
   <div class="signals-example__result">
-    <app-execution [time]="totalTime" [loading]="loading()" (actionGetPlayers)="click()" />
+    <app-execution [time]="totalTime" [loading]="loading()" (actionGetPlayers)="getPlayers()" />
     @if (!loading()) {
       @if (error()) {
         <app-error [error]="error()"></app-error>
